# Shishimanu

./: .gitignore  LICENSE  Readme.md  codeofconduct.md  contributions.md  gitcheatsheet.md  pathupdate.md  pyproject.toml
src/OTTO/: Dialog.py  Helper.py  Player.py  main.py  pet.py
src/OTTO.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/Shishimanu/: Dialog.py  Helper.py  Player.py  StateMachine.py  main.py  pet.py
src/Shishimanu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
